--- a/pwa/main.css
+++ b/pwa/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../volcano.png");
+    background-image: url("volcano.png");
     background-size: cover;
 }
 input {
